// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`docxDeserializer > should correctly deserialize bold text 1`] = `
[
  {
    "children": [
      {
        "text": "This has ",
      },
      {
        "bold": true,
        "text": "bold",
      },
      {
        "text": " text.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`docxDeserializer > should correctly deserialize empty paragraph 1`] = `[]`;

exports[`docxDeserializer > should correctly deserialize heading 1 1`] = `
[
  {
    "children": [
      {
        "text": "Heading 1",
      },
    ],
    "className": "H1",
    "level": "1",
    "type": "head",
  },
]
`;

exports[`docxDeserializer > should correctly deserialize heading 2 1`] = `
[
  {
    "children": [
      {
        "text": "Heading 2",
      },
    ],
    "className": "H2",
    "level": "2",
    "type": "head",
  },
]
`;

exports[`docxDeserializer > should correctly deserialize heading 3 1`] = `
[
  {
    "children": [
      {
        "text": "Heading 3",
      },
    ],
    "className": "H3",
    "level": "3",
    "type": "head",
  },
]
`;

exports[`docxDeserializer > should correctly deserialize hyperlink 1`] = `
[
  {
    "children": [
      {
        "text": "This is a link.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`docxDeserializer > should correctly deserialize italic text 1`] = `
[
  {
    "children": [
      {
        "text": "This has ",
      },
      {
        "italic": true,
        "text": "italic",
      },
      {
        "text": " text.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`docxDeserializer > should correctly deserialize mixed formatting 1`] = `
[
  {
    "children": [
      {
        "text": "This has ",
      },
      {
        "bold": true,
        "text": "bold",
      },
      {
        "text": " and ",
      },
      {
        "italic": true,
        "text": "italic",
      },
      {
        "text": " and ",
      },
      {
        "children": [
          {
            "italic": true,
            "text": "both",
          },
        ],
        "type": "paragraph",
      },
      {
        "text": " text.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`docxDeserializer > should correctly deserialize simple paragraph 1`] = `
[
  {
    "children": [
      {
        "text": "This is a simple paragraph.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`docxDeserializer > should correctly deserialize table 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "text": "",
          },
        ],
        "type": "card-before",
      },
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "text": "Cell 1",
                  },
                ],
                "type": "table-cell",
              },
              {
                "children": [
                  {
                    "text": "Cell 2",
                  },
                ],
                "type": "table-cell",
              },
            ],
            "type": "table-row",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "text": "Cell 3",
                  },
                ],
                "type": "table-cell",
              },
              {
                "children": [
                  {
                    "text": "Cell 4",
                  },
                ],
                "type": "table-cell",
              },
            ],
            "type": "table-row",
          },
        ],
        "type": "table",
      },
      {
        "children": [
          {
            "text": "",
          },
        ],
        "type": "card-after",
      },
    ],
    "type": "card",
  },
]
`;

exports[`docxDeserializer > should correctly deserialize unordered list 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "text": "Item 1",
          },
        ],
        "type": "list-item",
      },
      {
        "children": [
          {
            "text": "Item 2",
          },
        ],
        "type": "list-item",
      },
      {
        "children": [
          {
            "text": "Item 3",
          },
        ],
        "type": "list-item",
      },
    ],
    "type": "list",
  },
]
`;

exports[`docxDeserializer > should match snapshot for all test cases combined 1`] = `
[
  [
    {
      "children": [
        {
          "text": "This is a simple paragraph.",
        },
      ],
      "type": "paragraph",
    },
  ],
  [
    {
      "children": [
        {
          "text": "This has ",
        },
        {
          "bold": true,
          "text": "bold",
        },
        {
          "text": " text.",
        },
      ],
      "type": "paragraph",
    },
  ],
  [
    {
      "children": [
        {
          "text": "This has ",
        },
        {
          "italic": true,
          "text": "italic",
        },
        {
          "text": " text.",
        },
      ],
      "type": "paragraph",
    },
  ],
  [
    {
      "children": [
        {
          "text": "Heading 1",
        },
      ],
      "className": "H1",
      "level": "1",
      "type": "head",
    },
  ],
  [
    {
      "children": [
        {
          "text": "Heading 2",
        },
      ],
      "className": "H2",
      "level": "2",
      "type": "head",
    },
  ],
  [
    {
      "children": [
        {
          "text": "Heading 3",
        },
      ],
      "className": "H3",
      "level": "3",
      "type": "head",
    },
  ],
  [
    {
      "children": [
        {
          "children": [
            {
              "text": "Item 1",
            },
          ],
          "type": "list-item",
        },
        {
          "children": [
            {
              "text": "Item 2",
            },
          ],
          "type": "list-item",
        },
        {
          "children": [
            {
              "text": "Item 3",
            },
          ],
          "type": "list-item",
        },
      ],
      "type": "list",
    },
  ],
  [
    {
      "children": [
        {
          "text": "This is a link.",
        },
      ],
      "type": "paragraph",
    },
  ],
  [
    {
      "children": [
        {
          "children": [
            {
              "text": "",
            },
          ],
          "type": "card-before",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "text": "Cell 1",
                    },
                  ],
                  "type": "table-cell",
                },
                {
                  "children": [
                    {
                      "text": "Cell 2",
                    },
                  ],
                  "type": "table-cell",
                },
              ],
              "type": "table-row",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "text": "Cell 3",
                    },
                  ],
                  "type": "table-cell",
                },
                {
                  "children": [
                    {
                      "text": "Cell 4",
                    },
                  ],
                  "type": "table-cell",
                },
              ],
              "type": "table-row",
            },
          ],
          "type": "table",
        },
        {
          "children": [
            {
              "text": "",
            },
          ],
          "type": "card-after",
        },
      ],
      "type": "card",
    },
  ],
  [
    {
      "children": [
        {
          "text": "This has ",
        },
        {
          "bold": true,
          "text": "bold",
        },
        {
          "text": " and ",
        },
        {
          "italic": true,
          "text": "italic",
        },
        {
          "text": " and ",
        },
        {
          "children": [
            {
              "italic": true,
              "text": "both",
            },
          ],
          "type": "paragraph",
        },
        {
          "text": " text.",
        },
      ],
      "type": "paragraph",
    },
  ],
  [],
]
`;
